feat: add new endpoints auth/update-profile and auth/update-password
