# src/models/user.model.ts
@@ -3,23 +3,61 @@ import { encrypt } from "../utils/encryption";
 import { renderMailHtml, sendmail } from "../utils/mail/mail";
 import { CLIENT_HOST, EMAIL_SMTP_USER } from "../utils/env";
 import { ROLES } from "../utils/constant";
+import * as Yup from "yup";
 
-export interface User {
-  fullName: string;
-  username: string;
-  email: string;
-  password: string;
-  role: string;
-  profilePicture: string;
-  isActive: boolean;
-  activationCode: string;
-  createdAt?: string;
-}
+const validatePassword = Yup.string()
+  .required()
+  .min(6, "Password minimal 6 karakter")
+  .test(
+    "atleast-one-uppercase-letter",
+    "Contains atleast one uppercase letter",
+    (value) => {
+      if (!value) return false;
+      const regex = /^(?=.*[A-Z])/;
+      return regex.test(value);
+    }
+  )
+  .test("atleast-one-number", "Contains atleast one number", (value) => {
+    if (!value) return false;
+    const regex = /^(?=.*\d)/;
+    return regex.test(value);
+  });
+const validateConfirmPassword = Yup.string()
+  .required()
+  .oneOf([Yup.ref("password"), ""], "Password not match");
 
 export const USER_MODEL_NAME = "User";
 
-const Schema = mongoose.Schema;
+export const userLoginDTO = Yup.object({
+  identifier: Yup.string().required(),
+  password: validatePassword,
+});
 
+export const userUpdatePasswordDTO = Yup.object({
+  oldPassword: validatePassword,
+  password: validatePassword,
+  confirmPassword: validateConfirmPassword,
+});
+
+export const userDTO = Yup.object({
+  fullName: Yup.string().required(),
+  username: Yup.string().required(),
+  email: Yup.string().required().email(),
+  password: validatePassword,
+  confirmPassword: validateConfirmPassword,
+});
+
+export type TypeUser = Yup.InferType<typeof userDTO>;
+
+export interface User extends Omit<TypeUser, "confirmPassword"> {
+  isActive: boolean;
+  activationCode: string;
+  role: string;
+  profilePicture: string;
+  createdAt?: string;
+}
+
+const Schema = mongoose.Schema;
 
 const UserSchema = new Schema<User>(
   {
